# 6 UPDATE: added .emphasize css

--- a/PARKWEBSITE/styles/main.css
+++ b/PARKWEBSITE/styles/main.css
@@ -70,6 +70,18 @@ main{
   padding: 1em;
 }
 
+.emphasize {
+  border-left: 5px solid #27AE60;
+  box-shadow: 1px 0 5px #27AE60;
+  padding: 1em
+}
+
+.emphasize h2 {
+  margin: 0;
+  border-left: none;
+  text-align: center;
+}
+
 table{
   margin-top: 1em;
   width: 100%;
