--- a/PARKWEBSITE/styles/main.css
+++ b/PARKWEBSITE/styles/main.css
@@ -82,6 +82,24 @@ main{
   text-align: center;
 }
 
+.wrapper h2 {
+  text-align: start;
+}
+
+.tickets {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.total {
+  text-align:right;
+  
+}
+
+.total td:last-child {
+  text-align: start;
+}
+
 table{
   margin-top: 1em;
   width: 100%;
@@ -105,7 +123,6 @@ table tfoot{
 }
 
 article{
-  border-left: 5px solid #27AE60;
   padding-left: 10px;
   margin: 1em 1em 1em 0;
 }
@@ -114,9 +131,6 @@ article:last-of-type{
 }
 
 article h2{
-  margin: 0;
-  padding: 1.5em;
-  border-left: none;
   background-position: center;
   background-size: cover;
   text-align: center;
